--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "14.2.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "supabase": "^2.1.1"
